file write service